--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ cpp-src/basic/test/CMakeFiles/
 cpp-src/basic/test/CTestTestfile.cmake
 cpp-src/basic/test/Makefile
 cpp-src/basic/test/cmake_install.cmake
+python-src/venv
